{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 814,
  "lineage": "b31ba3bd-c7e5-dfa4-5c8d-fdea832248ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hassan_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:internet-gateway/igw-0150f6b348c4ad55b",
            "id": "igw-0150f6b348c4ad55b",
            "owner_id": "475893214891",
            "tags": {
              "Name": "hassan_gateway"
            },
            "tags_all": {
              "Name": "hassan_gateway"
            },
            "vpc_id": "vpc-0ac5d52dba989a93f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hassan_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:vpc/vpc-0ac5d52dba989a93f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0cab9e1f5f1b7092b",
            "default_route_table_id": "rtb-0889d2e4887eda8f0",
            "default_security_group_id": "sg-00dd3726fca68c81e",
            "dhcp_options_id": "dopt-06c97e6874c09940c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac5d52dba989a93f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0889d2e4887eda8f0",
            "owner_id": "475893214891",
            "tags": {
              "Name": "hassan_vpc"
            },
            "tags_all": {
              "Name": "hassan_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hassan_app_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014d05e6b24240371",
            "arn": "arn:aws:ec2:us-west-1:475893214891:instance/i-08ed1bbf03247f247",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ed1bbf03247f247",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hassan_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df5112319fd03a0c",
            "private_dns": "ip-20-0-20-189.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.20.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf7d0d10a065e1f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa535a44edc781b7",
            "tags": {
              "Name": "hassan_EC2_backend"
            },
            "tags_all": {
              "Name": "hassan_EC2_backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037594d36be2e0a20"
            ]
          },
          "dependencies": [
            "aws_vpc.hassan_vpc",
            "module.private.aws_security_group.hassan_sg_private",
            "module.private.aws_subnet.hassan_subnet_private"
          ]
        }
      ]
    },
    {
      "module": "module.private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hassan_route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:route-table/rtb-0a44d7bb3a65d1f86",
            "id": "rtb-0a44d7bb3a65d1f86",
            "owner_id": "475893214891",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hassan_private_rt"
            },
            "tags_all": {
              "Name": "hassan_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac5d52dba989a93f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hassan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1a49f42cfbabd95",
            "route_table_id": "rtb-0a44d7bb3a65d1f86",
            "subnet_id": "subnet-0fa535a44edc781b7"
          },
          "dependencies": [
            "aws_vpc.hassan_vpc",
            "module.private.aws_route_table.hassan_route_table_private",
            "module.private.aws_subnet.hassan_subnet_private"
          ]
        }
      ]
    },
    {
      "module": "module.private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hassan_sg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:security-group/sg-037594d36be2e0a20",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037594d36be2e0a20",
            "ingress": [
              {
                "cidr_blocks": [
                  "20.0.20.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20230407154926660600000001",
            "name_prefix": "terraform-",
            "owner_id": "475893214891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hassan_sg_private"
            },
            "tags_all": {
              "Name": "hassan_sg_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac5d52dba989a93f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hassan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hassan_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:subnet/subnet-0fa535a44edc781b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "20.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa535a44edc781b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475893214891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hassan_private_subnet"
            },
            "tags_all": {
              "Name": "hassan_private_subnet"
            },
            "vpc_id": "vpc-0ac5d52dba989a93f"
          },
          "dependencies": [
            "aws_vpc.hassan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hassan_app_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014d05e6b24240371",
            "arn": "arn:aws:ec2:us-west-1:475893214891:instance/i-0cd8e1fb3abdf17d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd8e1fb3abdf17d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hassan_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0771716a7362afb05",
            "private_dns": "ip-20-0-10-193.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.10.193",
            "public_dns": "ec2-52-53-203-144.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.203.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d96708af8375e808",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016970af978b6578a",
            "tags": {
              "Name": "hassan_EC2_frontend"
            },
            "tags_all": {
              "Name": "hassan_EC2_frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07efa87d879054e43"
            ]
          },
          "dependencies": [
            "aws_vpc.hassan_vpc",
            "module.public.aws_security_group.hassan_sg_public",
            "module.public.aws_subnet.hassan_subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hassan_route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:route-table/rtb-0b8c3b11d3955175e",
            "id": "rtb-0b8c3b11d3955175e",
            "owner_id": "475893214891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0150f6b348c4ad55b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hassan_public_rt"
            },
            "tags_all": {
              "Name": "hassan_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac5d52dba989a93f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hassan_igw",
            "aws_vpc.hassan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086b607e5f7e01775",
            "route_table_id": "rtb-0b8c3b11d3955175e",
            "subnet_id": "subnet-016970af978b6578a"
          },
          "dependencies": [
            "aws_internet_gateway.hassan_igw",
            "aws_vpc.hassan_vpc",
            "module.public.aws_route_table.hassan_route_table_public",
            "module.public.aws_subnet.hassan_subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hassan_sg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:security-group/sg-07efa87d879054e43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07efa87d879054e43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access from everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "20.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "20.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "20.0.0.0/16"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "20.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230407154926675900000002",
            "name_prefix": "terraform-",
            "owner_id": "475893214891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hassan_sg_public"
            },
            "tags_all": {
              "Name": "hassan_sg_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac5d52dba989a93f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hassan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hassan_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:subnet/subnet-016970af978b6578a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "20.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016970af978b6578a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475893214891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hassan_public_subnet"
            },
            "tags_all": {
              "Name": "hassan_public_subnet"
            },
            "vpc_id": "vpc-0ac5d52dba989a93f"
          },
          "dependencies": [
            "aws_vpc.hassan_vpc"
          ]
        }
      ]
    }
  ]
}